--- a/index.html
+++ b/index.html
@@ -25,16 +25,18 @@
 <div id="content" class="inline center">
 	<p>
 		Witam Ciebie na mojej stronie. Elektronika to moja praca zawodowa i pasja. Przeprowadziłem
-		ponad 20 tysięcy napraw urządzeń energo-elektronicznych w tym również doradztwo techniczne.
+		ponad 20 tysięcy napraw urządzeń energo-elektronicznych w tym również doradztw serwisowych.
 	</p>
 	<p>
-		Fundamentem na którym bazuję przy analizie awarii lub doradztwa technicznego są kompetencje miękkie.
-		Gdy inni zatrzymują się przy problemie, to ja idę dalej i rozpoczynam szerokokątne działania naprawcze i doradcze.
+		Fundamentem na którym bazuję przy analizie awarii to wieloletnia wypracowana duża 
+    kreatywność w rozwiązywaniu rozmaitych problemów technicznych. Ponad trzydziestoletnia działalność
+    w branży elektroniki i oprogramowania wbudowanego daje mi całościowe zrozumienie branży i jej ewolucji
+    technologicznej. Dużo satysfakcji przynosi mi podążanie za nowymi trendami i ich  adaptowanie do
+    rzeczywistych potrzeb ludzi XXI wieku, których spotykam w swoim życiu zawodowym i prywatnym.
 	</p>
 	<p>
-		Diagnostyka elektroniki jest sztuką w używaniu narzędzi pomiarowych, szerokokątnego spojrzenia
-		na występujący problem nawet od strony mechanicznej czy obsługowej oraz bardzo wnikliwego wysłuchania
-		użytkownika którego spotkała awaria.
+		Diagnostyka i serwis elektroniki jest sztuką w używaniu narzędzi pomiarowych, analizy danych i szerokokątnego spojrzenia
+		na występujący problem pod kątem elektronicznym, programowym,obsługowym czy mechatronicznym.
 	</p>
 	<p>
 		W katalogu naprawy i serwis, pokrótce zobaczysz z czym się zmagam na co dzień.
